--- a/BlazorView/Pages/Index.razor
+++ b/BlazorView/Pages/Index.razor
@@ -2,9 +2,17 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<div class="contentWrapper">
+    <h1>ANGSTFRI JOBBSØKING</h1>
 
-Welcome to your new app.
+    <picture>
+        <img src="img/LETT-5.png" class="logo" />
+    </picture>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+    <form>
+        <input type="text"/>
+        <button>Søk</button>
+    </form>
+</div>
+
 
