--- a/BlazorView/Pages/index.razor.css
+++ b/BlazorView/Pages/index.razor.css
@@ -19,7 +19,7 @@
     max-width: 60%;
 }
 
-.contentWrapper form {
+::deep form {
     display: flex;
     flex-direction: row;
     align-items: center;
