--- a/BlazorView/Pages/UserPreference.razor
+++ b/BlazorView/Pages/UserPreference.razor
@@ -6,23 +6,44 @@
 
 @inject FetchUserFromDb UserListingService
 
-<h3>Brukerpreferanser :</h3>
-<p>@usersFromDb</p>
-@foreach (var item in users)
-    {
-        <p>@item.Name</p>
-    }
-<PostNewUser />
+@if (showUsers)
+{
+    <GetUser />
+}
 
+
+<h3>Legg til ny bruker</h3>
+<p>@counter</p>
+<EditForm Model="formModel">
+    <input type="text" @bind-value="name" @bind-value:event="oninput" />
+    <button @onclick="submitUser">Legg til bruker</button>
+</EditForm>
 
 @code {
-    IEnumerable<User> users = new List<User>();
-    string usersFromDb;
 
-    protected override async Task OnInitializedAsync()
+    private class FormModel
     {
-        usersFromDb = await UserListingService.FetchUser();
-        users = JsonConvert.DeserializeObject<IEnumerable<User>>(usersFromDb);
+        public FormModel()
+        {
+        }
+    }
+
+    /*
+    Post user to db
+    */
+    FormModel formModel = new();
+    string name;
+    int counter;
+    bool showUsers = true;
+    private async void submitUser()
+    {
+        showUsers = false;
+        counter++;
+
+        User user = new User();
+        user.Name = name;
+        UserListingService.PostUser(user);
+        showUsers = true;
     }
 }
 
