--- a/BlazorView/Pages/UserPreference.razor
+++ b/BlazorView/Pages/UserPreference.razor
@@ -13,7 +13,6 @@
 
 
 <h3>Legg til ny bruker</h3>
-<p>@counter</p>
 <EditForm Model="formModel">
     <input type="text" @bind-value="name" @bind-value:event="oninput" />
     <button @onclick="submitUser">Legg til bruker</button>
@@ -35,7 +34,7 @@
     string name;
     int counter;
     bool showUsers = true;
-    private async void submitUser()
+    private async Task submitUser()
     {
         showUsers = false;
         counter++;
@@ -43,7 +42,9 @@
         User user = new User();
         user.Name = name;
         UserListingService.PostUser(user);
+        await Task.Delay(5);
         showUsers = true;
+
     }
 }
 
