--- a/BlazorView/Shared/MainLayout.razor
+++ b/BlazorView/Shared/MainLayout.razor
@@ -1,19 +1,25 @@
 ﻿@inherits LayoutComponentBase
+@using BlazorView.Data
+<CascadingValue Value="@loggedInUser">
+    <PageTitle>BlazorView</PageTitle>
+    <div class="page">
+        <div class="sidebar">
+            <NavMenu />
+        </div>
 
-<PageTitle>BlazorView</PageTitle>
-
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
+        <main>
+            <article class="content px-4">
+                @Body
+            </article>
+        </main>
+        <div class="mainFooter">
+            <MainFooter />
+        </div>
     </div>
+    </CascadingValue>
 
-    <main>
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-    <div class="mainFooter">
-    <MainFooter />
-    </div>
-</div>
+    @code{
+        private LoggedInUserService loggedInUser = new LoggedInUserService();
+
+    }
 
