--- a/BlazorView/Shared/NavMenu.razor
+++ b/BlazorView/Shared/NavMenu.razor
@@ -2,7 +2,6 @@
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a href="userpreference">@loggedInUser.Name</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -24,6 +23,11 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="userpreference">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Brukerpreferanser
             </NavLink>
         </div>
     </nav>
