--- a/BlazorView/Pages/Components/DisplayListing.razor
+++ b/BlazorView/Pages/Components/DisplayListing.razor
@@ -1,9 +1,8 @@
 ﻿@using BlazorView.Data
 @inject FetchUserFromDb userFromDb
 
-
-@if (showListing)
-    {
+@if (showListing && !loggedInUser.uninterests.Contains(item.Uuid))
+    {    
     <section class="listing">
         <h5>@item.Title</h5>
         <p>@((MarkupString)item.Description)</p>
