--- a/BlazorView/Pages/Components/ShowNotLikedListings.razor
+++ b/BlazorView/Pages/Components/ShowNotLikedListings.razor
@@ -12,6 +12,10 @@
             <p>@item.Title</p> <button @onclick="() => RemoveFromUninterests(item)">Fjern fra ikke likt kategori</button>
         }
     }
+@if (loggedInUser.uninterests.Count() == 0)
+    {
+        <p> Ingen stillinger er markert som ikke likt.</p>
+    }
     @code {
 
         IEnumerable<Advertisement> advertisementList = new List<Advertisement>();
