Resolved bug of not having any users in database

--- a/BlazorView/Pages/Components/ShowLikedListings.razor
+++ b/BlazorView/Pages/Components/ShowLikedListings.razor
@@ -13,7 +13,7 @@
         <button @onclick="() => RemoveFromInterests(item)">Fjern fra likt kategori</button>
     }
 }
-@if (loggedInUser.interests.Count() == 0)
+@if (loggedInUser.interests == null || loggedInUser.interests.Count() == 0)
 {
         <p>Ingen stillinger er markert som likt</p>
 }
