Made municipalities show in blazor

--- a/BlazorView/Pages/UserPreference.razor
+++ b/BlazorView/Pages/UserPreference.razor
@@ -18,6 +18,8 @@
 
 <ShowLikedListings />
 
+<ShowLocations />
+
 <h3>Legg til ny bruker</h3>
 <EditForm Model="formModel">
     <input type="text" @bind-value="name" @bind-value:event="oninput" />
