--- a/BlazorView/Pages/Components/ShowLocations.razor
+++ b/BlazorView/Pages/Components/ShowLocations.razor
@@ -3,35 +3,35 @@
 @inject FetchLocationsFromDb LocationService
 
 <h3>Kommuner:</h3>
-@if (showPreferred)
-    {
-        <p>@showPreferred</p>
-<EditForm Model="locationModel">
-    <select @bind="selectedLocation">
-        <option value="">Velg kommune</option>
-        @foreach (var item in locations)
+<p>@showLocations</p>
+        <section>
+            <EditForm Model="locationModel">
+                <select @bind="selectedLocation">
+                    <option value="">Velg kommune</option>
+                    @foreach (var item in locations)
+                    {
+                        @if (!prefferedLocations.Any(i => i.LocationId == item.Id))
+                        {
+                            <option value="@item.Id">@item.Municipality</option>
+                        }
+                    }
+                </select>
+                <button @onclick="selectLocation">Velg kommune</button>
+
+            </EditForm>
+            <p>Lokasjoner lagt til:</p>
+            @foreach (var item in locations)
             {
-            @if (!prefferedLocations.Any(i => i.LocationId == item.Id))
+                @if (prefferedLocations.Any(i => i.LocationId == item.Id))
                 {
-                <option value="@item.Id">@item.Municipality</option>
+                    <p>@item.Municipality</p>
+
                 }
             }
-    </select>
-    <button @onclick="selectLocation">Velg kommune</button>
-
-</EditForm>
-<p>Lokasjoner lagt til:</p>
-@foreach (var item in locations)
-    {
-    @if (prefferedLocations.Any(i => i.LocationId == item.Id))
-        {
-        <p>@item.Municipality</p>
-
-        }
-    }
-    }
+        </section>
 @code {
-    bool showPreferred;
+    [Parameter]
+    public EventCallback<bool> showLocations { get; set; }
 
     [CascadingParameter]
     public LoggedInUserService? loggedInUser { get; set; }
@@ -54,7 +54,6 @@
 
     protected override async Task OnInitializedAsync()
     {
-        showPreferred = true;
 
         // Fetch list of municipalities in Norway from db
         locationsFromDb = await LocationService.FetchLocations();
@@ -67,16 +66,15 @@
 
     private async void selectLocation()
     {
-        showPreferred = false;
-        await Task.Delay(10);
 
         PreferredLocation preferredLocation = new();
         preferredLocation.UserId = loggedInUser.Id;
         preferredLocation.LocationId = selectedLocation;
 
         LocationService.PostPreferredLocation(preferredLocation);
+        prefferedLocations.Append(preferredLocation);
 
-        showPreferred = true;
+        await showLocations.InvokeAsync();
 
 
     }
