--- a/BlazorView/Pages/Index.razor
+++ b/BlazorView/Pages/Index.razor
@@ -3,14 +3,13 @@
 @using Newtonsoft.Json
 
 @inject FetchUserFromDb UserListingService
-
+@inject FetchJobListingsFromInternet JobListingsFromInternetService
 @page "/"
 
 <PageTitle>Index</PageTitle>
 
 <div class="contentWrapper">
     <h1>ANGSTFRI JOBBSØKING</h1>
-
     <picture>
         <img src="img/LETT-5.png" class="logo" />
     </picture>
@@ -75,45 +74,6 @@
     //Users
     IEnumerable<User> users = new List<User>();
     string usersFromDb;
-    /*
-    protected override async Task OnInitializedAsync()
-    {
-        
-        usersFromDb = await UserListingService.FetchUser();
-        users = JsonConvert.DeserializeObject<IEnumerable<User>>(usersFromDb);
-        if (loggedInUser.Name == null)
-        {
-            loggedInUser.Name = users.First().Name;
-            loggedInUser.Id = users.First().Id;
-        }
+
    
-        // Interests
-        interestsFromDb = await UserListingService.FetchInterest();
-        interests = JsonConvert.DeserializeObject<IEnumerable<Interest>>(interestsFromDb);
-
-        foreach (var item in interests)
-        {
-            if (item.userGuid == loggedInUser.Id)
-            {
-                commonInterests.Add(item.advertisementUuid);
-            }
-        }
-        loggedInUser.interests = commonInterests;
-
-        // Uninterests
-        uninterestsFromDb = await UserListingService.FetchUninterest();
-        uninterests = JsonConvert.DeserializeObject<IEnumerable<Interest>>(uninterestsFromDb);
-
-        foreach (var item in uninterests)
-        {
-            if (item.userGuid == loggedInUser.Id)
-            {
-                commonUninterests.Add(item.advertisementUuid);
-            }
-        }
-        loggedInUser.uninterests = commonUninterests;
-
-    }
-
-        */
 }
